Introduced scan controller.
